--- a/SlugRide/src/app/driver-ondemand-submit/driver-ondemand-submit.component.html
+++ b/SlugRide/src/app/driver-ondemand-submit/driver-ondemand-submit.component.html
@@ -6,3 +6,6 @@
   <div class= "text-left">
         <a routerLink="/drivertype" class="btn btn-default">Back</a> <br> 
   </div>
+  <sebm-google-map [latitude]="lat" [longitude]="lng">
+      <sebm-google-map-marker [latitude]="lat" [longitude]="lng"></sebm-google-map-marker>
+  </sebm-google-map>
