--- a/SlugRide/src/app/account-edit/account-edit.component.html
+++ b/SlugRide/src/app/account-edit/account-edit.component.html
@@ -1,23 +1,19 @@
-    <h2 class="text-center">Register</h2>
-    <form name="form" (ngSubmit)="f.form.valid && register()" #f="ngForm" novalidate>
-        <div class="form-group" [ngClass]="{ 'has-error': f.submitted && !email.valid }">
+    <h2 class="text-center">Edit Information</h2>
+    <form name="form" (ngSubmit)="f.form.valid && accountEdit()" #f="ngForm" novalidate>
+        <div class="form-group" [ngClass]="{ 'has-error': f.submitted && !firstName.valid }">
             <input placeholder ="First Name"type="text" class="form-control text-center" name="firstName" [(ngModel)]="model.firstName" #firstName="ngModel" required />
             <div *ngIf="f.submitted && !firstName.valid" class="help-block">First Name is required</div>
         </div>
-        <div class="form-group" [ngClass]="{ 'has-error': f.submitted && !email.valid }">
+        <div class="form-group" [ngClass]="{ 'has-error': f.submitted && !lastName.valid }">
             <input type="text" placeholder ="Last Name" class="form-control text-center" name="lastName" [(ngModel)]="model.lastName" #lastName="ngModel" required />
             <div *ngIf="f.submitted && !lastName.valid" class="help-block">Last Name is required</div>
-        </div>
-        <div class="form-group" [ngClass]="{ 'has-error': f.submitted && !email.valid }">
-            <input type="text" placeholder ="Email" class="form-control text-center" name="email" [(ngModel)]="model.email" #email="ngModel" required />
-            <div *ngIf="f.submitted && !email.valid" class="help-block">Email is required</div>
         </div>
         <div class="form-group" [ngClass]="{ 'has-error': f.submitted && !password.valid }">
             <input type="password" placeholder ="Password" class="form-control text-center" name="password" [(ngModel)]="model.password" #password="ngModel" required />
             <div *ngIf="f.submitted && !password.valid" class="help-block">Password is required</div>
         </div>
         <div class="form-group text-center">
-            <button class="btn btn-primary">Register</button> <br>
-            <a [routerLink]="['/login']" class="btn btn-link">Back</a>
+            <button class="btn btn-primary">Submit</button> <br>
+            <a [routerLink]="['/account']" class="btn btn-link">Back</a>
         </div>
     </form>
