--- a/SlugRide/src/app/forgot/forgot.component.html
+++ b/SlugRide/src/app/forgot/forgot.component.html
@@ -1,8 +1,11 @@
-  <h1 class="text-center">Password Recovery</h1>
-  <body>
-    <div class= "text-center">
-      <input type = "text" placeholder="Username/UCSC Email" name="userid"><br>
-      <input type = "button" value="Submit"><br>
-      <a routerLink="/login" >Back</a> 
-    </div>
-  </body>
+    <h2 class="text-center">Forgot</h2>
+    <form name="form" (ngSubmit)="f.form.valid && forgot()" #f="ngForm" novalidate>
+        <div class="form-group" [ngClass]="{ 'has-error': f.submitted && !email.valid }">
+            <input type="text" placeholder ="Email" class="form-control text-center" name="email" [(ngModel)]="model.email" #email="ngModel" required />
+            <div *ngIf="f.submitted && !email.valid" class="help-block">Email is required</div>
+        </div>
+        <div class="form-group text-center">
+            <button class="btn btn-primary">Submit</button> <br>
+            <a [routerLink]="['/login']" class="btn btn-link">Back</a>
+        </div>
+    </form>
