Front End Update
Updated models and components of the login, register, forgot, and
account page.

--- a/SlugRide/src/app/account/account.component.html
+++ b/SlugRide/src/app/account/account.component.html
@@ -6,10 +6,10 @@
   <p class="text-left">Password:</p> <p class="text-right"> {{currentUser.password}} </p> <br>
 
   <h2 class="text-left"> User Statistics</h2>
-  <p class="text-left">Driver Rating:</p> <p class="text-right"> 0/5 </p> <br>
-  <p class="text-left">Driver Given: </p> <p class="text-right"> 0 </p>  <br>
-  <p class="text-left">Rider Rating </p> <p class="text-right"> 0/5 </p> <br>
-  <p class="text-left">Rider Taken:</p> <p class="text-right"> 0 </p> <br>
+  <p class="text-left">Driver Rating:</p> <p class="text-right"> {{this.driver_rating}}/5 </p> <br>
+  <p class="text-left">Driver Given: </p> <p class="text-right"> {{this.rides_given}} </p>  <br>
+  <p class="text-left">Rider Rating </p> <p class="text-right"> {{this.rider_rating}}/5 </p> <br>
+  <p class="text-left">Rider Taken:</p> <p class="text-right"> {{this.rides_taken}} </p> <br>
 
   <div class= "text-center">
     <div class="btn-group-vertical">
