--- a/SlugRide/src/app/forgot/forgot.component.html
+++ b/SlugRide/src/app/forgot/forgot.component.html
@@ -1,4 +1,5 @@
     <h2 class="text-center">Forgot</h2>
+    <div *ngIf="f.submitted && this.incorrect_forgot" class="text-center text-danger ">UCSC Email not in system</div>
     <form name="form" (ngSubmit)="f.form.valid && forgot()" #f="ngForm" novalidate>
         <div class="form-group" [ngClass]="{ 'has-error': f.submitted && !email.valid }">
             <input type="text" placeholder ="Email" class="form-control text-center" name="email" [(ngModel)]="model.email" #email="ngModel" required />
