--- a/SlugRide/src/app/driver-schedule/driver-schedule.component.html
+++ b/SlugRide/src/app/driver-schedule/driver-schedule.component.html
@@ -1,3 +1,7 @@
-<p>
-  driver-schedule works!
-</p>
+<h1 class="text-center"> Current Rides </h1> 
+<div class="col-md-6 col-md-offset-3">      
+            {{rides.driver_email}} ({{rides.driver_departure}} {{rides.driver_days}}) <br>
+</div>
+<div class= "text-left">
+    <a routerLink = "/usertype" class="btn btn-default">Back</a> <br> 
+</div>
