--- a/SlugRide/src/app/user-type/user-type.component.html
+++ b/SlugRide/src/app/user-type/user-type.component.html
@@ -4,6 +4,7 @@
   <span class="glyphicon glyphicon-th-list"></span></button>
   <ul class="dropdown-menu">
     <li><a routerLink="/account">Account</a></li>
+    <li><a routerLink="/driverschedule">Driver Schedule</a></li>
     <li><a routerLink="/login">Log Out</a></li>
   </ul>
 </div>
