--- a/SlugRide/src/app/driver-planned-submit/driver-planned-submit.component.html
+++ b/SlugRide/src/app/driver-planned-submit/driver-planned-submit.component.html
@@ -16,6 +16,39 @@
             <input type="text" placeholder ="Day" class="form-control text-center" name="driver_days" [(ngModel)]="model.driver_days" #driver_days="ngModel" required />
             <div *ngIf="f.submitted && !driver_days.valid" class="help-block">Day is required</div>
         </div>
+        <div class="form-group" [ngClass]="{ 'has-error': f.submitted && (!this.days[0] && !this.days[1] && !this.days[2] && !this.days[3] && !this.days[4] && !this.days[5] && !this.days[6])}">
+            <div class="checkbox">
+              <label>
+                  <input type="checkbox" name="monday" [(ngModel)]="this.days[0]" #this.days[0]="ngModel" required>
+                  Monday 
+              </label>
+              <label>
+                  <input type="checkbox" name="tuesday" [(ngModel)]="this.days[1]" #this.days[1]="ngModel" required>
+                  Tuesday
+              </label>
+              <label>
+                  <input type="checkbox" name="wednesday" [(ngModel)]="this.days[2]" #this.days[2]="ngModel" required>
+                  Wednesday
+              </label>
+              <label>
+                  <input type="checkbox" name="thursday" [(ngModel)]="this.days[3]" #this.days[3]="ngModel" required>
+                  Thursday
+              </label>
+              <label>
+                  <input type="checkbox" name="friday" [(ngModel)]="this.days[4]" #this.days[4]="ngModel" required>
+                  Friday
+              </label>
+              <label>
+                  <input type="checkbox" name="saturday" [(ngModel)]="this.days[5]" #this.days[5]="ngModel" required>
+                  Saturday
+              </label>
+              <label>
+                  <input type="checkbox" name="sunday" [(ngModel)]="this.days[6]" #this.days[6]="ngModel" required>
+                  Sunday
+              </label>
+            </div>
+            <div *ngIf="f.submitted && (!this.days[0] && !this.days[1] && !this.days[2] && !this.days[3] && !this.days[4] && !this.days[5] && !this.days[6])" class="help-block">Please choose at least one day</div>
+        </div>
         <div class="form-group text-center">
             <button class="btn btn-primary">Submit</button> <br>
         </div>
