--- a/SlugRide/src/app/driver-schedule/driver-schedule.component.html
+++ b/SlugRide/src/app/driver-schedule/driver-schedule.component.html
@@ -1,6 +1,11 @@
-<h1 class="text-center"> Current Rides </h1> 
-<div class="col-md-6 col-md-offset-3">      
-            {{rides.driver_email}} ({{rides.driver_departure}} {{rides.driver_days}}) <br>
+<h1 class="text-center"> Scheduled Rides </h1> 
+<div class="col-md-6 col-md-offset-3">
+        <li *ngFor="let user of users">
+            {{user.username}} ({{user.firstName}} {{user.lastName}}) <br>
+            <div class= "text-left">
+              <a class="btn btn-primary" (click)="selectRide()">More Details</a> <br> 
+            </div>
+        </li>
 </div>
 <div class= "text-left">
     <a routerLink = "/usertype" class="btn btn-default">Back</a> <br> 
