--- a/SlugRide/src/app/login/login.component.html
+++ b/SlugRide/src/app/login/login.component.html
@@ -13,5 +13,6 @@
             <button class="btn btn-primary ">Login</button> <br>
             <a [routerLink]="['/register']" class="btn btn-link">Register</a> <br>
             <a [routerLink]="['/forgot']" class="btn btn-link">Forgot Password</a> <br>
+            <a [routerLink]="['/temp']" class="btn btn-link">Test</a> <br>
         </div>
     </form>
