Temp Page Change
Added correct JSON model

--- a/SlugRide/src/app/temp-page/temp-page.component.html
+++ b/SlugRide/src/app/temp-page/temp-page.component.html
@@ -1,3 +1,8 @@
-<p>
-  temp-page works!
-</p>
+     <div style="margin-left: 20px;">
+         name: {{ this.model.name }} <br/>
+         description: {{ this.model.description }} <br/>
+         slogan: {{ this.model.slogan }} <br/>
+         founded_date: {{ this.model.founded_date }} <br/>
+         website: {{ this.model.website }} <br/>
+         <hr/>
+     </div>
