Got console log working and the API talks to angularls! Doesnt show up on the web page though

--- a/SlugRide/src/app/temp-page/temp-page.component.html
+++ b/SlugRide/src/app/temp-page/temp-page.component.html
@@ -1,8 +1,8 @@
      <div style="margin-left: 20px;">
          name: {{ this.model.name }} <br/>
-         description: {{ this.model.description }} <br/>
-         slogan: {{ this.model.slogan }} <br/>
-         founded_date: {{ this.model.founded_date }} <br/>
-         website: {{ this.model.website }} <br/>
+         description: {{ model.description }} <br/>
+         slogan: {{ model.slogan }} <br/>
+         founded_date: {{ model.founded_date }} <br/>
+         website: {{ model.website }} <br/>
          <hr/>
      </div>
