Fixed all issues, check in the componenents file to see the fix for JSON object

--- a/SlugRide/src/app/temp-page/temp-page.component.html
+++ b/SlugRide/src/app/temp-page/temp-page.component.html
@@ -1,5 +1,5 @@
      <div style="margin-left: 20px;">
-         name: {{ this.model.name }} <br/>
+         name: {{ model.name }} <br/>
          description: {{ model.description }} <br/>
          slogan: {{ model.slogan }} <br/>
          founded_date: {{ model.founded_date }} <br/>
