Object changed to list

--- a/SlugRide/src/app/temp-page/temp-page.component.html
+++ b/SlugRide/src/app/temp-page/temp-page.component.html
@@ -1,8 +1,10 @@
      <div style="margin-left: 20px;">
-         name: {{ model.name }} <br/>
-         description: {{ model.description }} <br/>
-         slogan: {{ model.slogan }} <br/>
-         founded_date: {{ model.founded_date }} <br/>
-         website: {{ model.website }} <br/>
-         <hr/>
+         <li *ngFor="let temp of model">
+            name: {{ temp.name }} <br/>
+            description: {{ temp.description }} <br/>
+            slogan: {{ temp.slogan }} <br/>
+            founded_date: {{ temp.founded_date }} <br/>
+            website: {{ temp.website }} <br/>
+            <hr/>
+        </li>
      </div>
