--- a/SlugRide/src/app/register/register.component.html
+++ b/SlugRide/src/app/register/register.component.html
@@ -2,12 +2,12 @@
     <div *ngIf="f.submitted && this.incorrect_register" class="text-center text-danger ">UCSC Email already in use</div>
     <form name="form" (ngSubmit)="f.form.valid && register()" #f="ngForm" novalidate>
         <div class="form-group" [ngClass]="{ 'has-error': f.submitted && !email.valid }">
-            <input placeholder ="First Name"type="text" class="form-control text-center" name="firstName" [(ngModel)]="model.firstName" #firstName="ngModel" required />
-            <div *ngIf="f.submitted && !firstName.valid" class="help-block">First Name is required</div>
+            <input placeholder ="First Name"type="text" class="form-control text-center" name="firstname" [(ngModel)]="model.firstname" #firstname="ngModel" required />
+            <div *ngIf="f.submitted && !firstname.valid" class="help-block">First Name is required</div>
         </div>
         <div class="form-group" [ngClass]="{ 'has-error': f.submitted && !email.valid }">
-            <input type="text" placeholder ="Last Name" class="form-control text-center" name="lastName" [(ngModel)]="model.lastName" #lastName="ngModel" required />
-            <div *ngIf="f.submitted && !lastName.valid" class="help-block">Last Name is required</div>
+            <input type="text" placeholder ="Last Name" class="form-control text-center" name="lastname" [(ngModel)]="model.lastname" #lastname="ngModel" required />
+            <div *ngIf="f.submitted && !lastname.valid" class="help-block">Last Name is required</div>
         </div>
         <div class="form-group" [ngClass]="{ 'has-error': f.submitted && !email.valid }">
             <input type="text" placeholder ="Email" class="form-control text-center" name="email" [(ngModel)]="model.email" #email="ngModel" required />
