--- a/SlugRide/src/app/register/register.component.html
+++ b/SlugRide/src/app/register/register.component.html
@@ -2,11 +2,11 @@
     <div *ngIf="f.submitted && this.incorrect_register" class="text-center text-danger ">UCSC Email already in use</div>
     <form name="form" (ngSubmit)="f.form.valid && register()" #f="ngForm" novalidate>
         <div class="form-group" [ngClass]="{ 'has-error': f.submitted && !email.valid }">
-            <input placeholder ="First Name"type="text" class="form-control text-center" name="firstname" [(ngModel)]="model.firstname" #firstname="ngModel" required />
+            <input placeholder ="First Name"type="text" class="form-control text-center" name="first_name" [(ngModel)]="model.firstname" #firstname="ngModel" required />
             <div *ngIf="f.submitted && !firstname.valid" class="help-block">First Name is required</div>
         </div>
         <div class="form-group" [ngClass]="{ 'has-error': f.submitted && !email.valid }">
-            <input type="text" placeholder ="Last Name" class="form-control text-center" name="lastname" [(ngModel)]="model.lastname" #lastname="ngModel" required />
+            <input type="text" placeholder ="Last Name" class="form-control text-center" name="last_name" [(ngModel)]="model.lastname" #lastname="ngModel" required />
             <div *ngIf="f.submitted && !lastname.valid" class="help-block">Last Name is required</div>
         </div>
         <div class="form-group" [ngClass]="{ 'has-error': f.submitted && !email.valid }">
