--- a/SlugRide/src/app/account/account.component.html
+++ b/SlugRide/src/app/account/account.component.html
@@ -1,7 +1,7 @@
   <h1 class="text-center">Account Information</h1>
   <h2 class="text-left"> Personal Information </h2>
-  <p class="text-left">First Name:</p> <p class="text-right"> {{currentUser.firstName}} </p> <br>
-  <p class="text-left">Last Name: </p> <p class="text-right"> {{currentUser.lastName}} </p>  <br>
+  <p class="text-left">First Name:</p> <p class="text-right"> {{currentUser.first_Name}} </p> <br>
+  <p class="text-left">Last Name: </p> <p class="text-right"> {{currentUser.last_Name}} </p>  <br>
   <p class="text-left">Email: </p> <p class="text-right"> {{currentUser.email}} </p> <br>
   <p class="text-left">Password:</p> <p class="text-right"> {{currentUser.password}} </p> <br>
 
