--- a/SlugRide/src/app/account-edit/account-edit.component.html
+++ b/SlugRide/src/app/account-edit/account-edit.component.html
@@ -1,12 +1,12 @@
     <h2 class="text-center">Edit Information</h2>
     <form name="form" (ngSubmit)="f.form.valid && accountEdit()" #f="ngForm" novalidate>
-        <div class="form-group" [ngClass]="{ 'has-error': f.submitted && !firstName.valid }">
-            <input placeholder ="First Name"type="text" class="form-control text-center" name="firstName" [(ngModel)]="model.firstName" #firstName="ngModel" required />
-            <div *ngIf="f.submitted && !firstName.valid" class="help-block">First Name is required</div>
+        <div class="form-group" [ngClass]="{ 'has-error': f.submitted && !first_name.valid }">
+            <input placeholder ="First Name"type="text" class="form-control text-center" name="first_name" [(ngModel)]="model.first_name" #first_name="ngModel" required />
+            <div *ngIf="f.submitted && !first_name.valid" class="help-block">First Name is required</div>
         </div>
-        <div class="form-group" [ngClass]="{ 'has-error': f.submitted && !lastName.valid }">
-            <input type="text" placeholder ="Last Name" class="form-control text-center" name="lastName" [(ngModel)]="model.lastName" #lastName="ngModel" required />
-            <div *ngIf="f.submitted && !lastName.valid" class="help-block">Last Name is required</div>
+        <div class="form-group" [ngClass]="{ 'has-error': f.submitted && !last_name.valid }">
+            <input type="text" placeholder ="Last Name" class="form-control text-center" name="last_name" [(ngModel)]="model.last_name" #last_name="ngModel" required />
+            <div *ngIf="f.submitted && !last_name.valid" class="help-block">Last Name is required</div>
         </div>
         <div class="form-group" [ngClass]="{ 'has-error': f.submitted && !password.valid }">
             <input type="password" placeholder ="Password" class="form-control text-center" name="password" [(ngModel)]="model.password" #password="ngModel" required />
