Boolean finally working
For the planned page there is now a boolean array instead of a string

--- a/SlugRide/src/app/rider-planned-submit/rider-planned-submit.component.html
+++ b/SlugRide/src/app/rider-planned-submit/rider-planned-submit.component.html
@@ -12,9 +12,38 @@
             <input type="text" placeholder ="Time of Departure" class="form-control text-center" name="rider_timeofdeparture" [(ngModel)]="model.rider_timeofdeparture" #rider_timeofdeparture="ngModel" required />
             <div *ngIf="f.submitted && !rider_timeofdeparture.valid" class="help-block">Time of Departure is required</div>
         </div>     
-        <div class="form-group" [ngClass]="{ 'has-error': f.submitted && !rider_days.valid }">
-            <input type="text" placeholder ="Day" class="form-control text-center" name="rider_days" [(ngModel)]="model.rider_days" #rider_days="ngModel" required />
-            <div *ngIf="f.submitted && !rider_days.valid" class="help-block">Day is required</div>
+        <div class="form-group" [ngClass]="{ 'has-error': f.submitted && (!this.days[0] && !this.days[1] && !this.days[2] && !this.days[3] && !this.days[4] && !this.days[5] && !this.days[6])}">
+            <div class="checkbox">
+              <label>
+                  <input type="checkbox" name="monday" [(ngModel)]="this.days[0]">
+                  Monday 
+              </label>
+              <label>
+                  <input type="checkbox" name="tuesday" [(ngModel)]="this.days[1]">
+                  Tuesday
+              </label>
+              <label>
+                  <input type="checkbox" name="wednesday" [(ngModel)]="this.days[2]">
+                  Wednesday
+              </label>
+              <label>
+                  <input type="checkbox" name="thursday" [(ngModel)]="this.days[3]">
+                  Thursday
+              </label>
+              <label>
+                  <input type="checkbox" name="friday" [(ngModel)]="this.days[4]">
+                  Friday
+              </label>
+              <label>
+                  <input type="checkbox" name="saturday" [(ngModel)]="this.days[5]">
+                  Saturday
+              </label>
+              <label>
+                  <input type="checkbox" name="sunday" [(ngModel)]="this.days[6]">
+                  Sunday
+              </label>
+            </div>
+            <div *ngIf="f.submitted && (!this.days[0] && !this.days[1] && !this.days[2] && !this.days[3] && !this.days[4] && !this.days[5] && !this.days[6])" class="help-block">Please choose at least one day</div>
         </div>
         <div class="form-group text-center">
             <button class="btn btn-primary">Submit</button> <br>
