--- a/SlugRide/src/app/user-type/user-type.component.html
+++ b/SlugRide/src/app/user-type/user-type.component.html
@@ -5,6 +5,7 @@
   <ul class="dropdown-menu">
     <li><a routerLink="/account">Account</a></li>
     <li><a routerLink="/driverschedule">Driver Schedule</a></li>
+    <li><a routerLink="/riderschedule">Rider Schedule</a></li>
     <li><a routerLink="/login">Log Out</a></li>
   </ul>
 </div>
