--- a/SlugRide/src/app/driver-planned-individual/driver-planned-individual.component.html
+++ b/SlugRide/src/app/driver-planned-individual/driver-planned-individual.component.html
@@ -1,10 +1,11 @@
 <h1 class="text-center"> Current Riders </h1> 
+<div *ngIf="f.submitted && this.incorrect_submit" class="text-center text-danger ">Error in accepting</div>
 <div class="col-md-6 col-md-offset-3">
         <li *ngFor="let user of users">
             {{user.username}} ({{user.first_Name}} {{user.last_Name}}) <br>
             <div class= "text-left">
-              <a class="btn btn-primary" (click)="approveRider(true)">Approve</a> <br> 
-              <a class="btn btn-primary" (click)="approveRider(false)">Deny</a> <br> 
+              <a class="btn btn-primary" (click)="approveRider(this.user.email, true)">Approve</a> <br> 
+              <a class="btn btn-primary" (click)="approveRider(this.user.email. false)">Deny</a> <br> 
             </div>
         </li>
 </div>
