--- a/SlugRide/src/app/rider-planned-submit/rider-planned-submit.component.html
+++ b/SlugRide/src/app/rider-planned-submit/rider-planned-submit.component.html
@@ -1,4 +1,5 @@
     <h2 class="text-center">Rider Planned</h2>
+    <div *ngIf="f.submitted && this.incorrect_submit" class="text-center text-danger ">Invalid Submit</div>
     <form name="form" (ngSubmit)="f.form.valid && riderPlanned()" #f="ngForm" novalidate>
         <div class="form-group" [ngClass]="{ 'has-error': f.submitted && !rider_destination.valid }">
             <input placeholder ="Start Location"type="text" class="form-control text-center" name="rider_destination" [(ngModel)]="model.rider_destination" #rider_destination="ngModel" required />
