--- a/SlugRide/src/app/rider-planned/rider-planned.component.html
+++ b/SlugRide/src/app/rider-planned/rider-planned.component.html
@@ -1,9 +1,10 @@
 <h1 class="text-center"> Availble Riders </h1> 
+<div *ngIf="f.submitted && this.incorrect_submit" class="text-center text-danger ">Cannot Join Ride</div>
 <div class="col-md-6 col-md-offset-3">
         <li *ngFor="let user of users">
             {{user.username}} ({{user.first_Name}} {{user.last_Name}}) <br>
             <div class= "text-left">
-              <a class="btn btn-primary" (click)="joinRide()">Join</a> <br> 
+              <a class="btn btn-primary" (click)="joinRide(this.user.password)">Join</a> <br> 
             </div>
         </li>
 </div>
