--- a/SlugRide/src/app/rider-planned/rider-planned.component.html
+++ b/SlugRide/src/app/rider-planned/rider-planned.component.html
@@ -1,5 +1,5 @@
 <h1 class="text-center"> Availble Riders </h1> 
-<div *ngIf="f.submitted && this.incorrect_submit" class="text-center text-danger ">Cannot Join Ride</div>
+<div *ngIf="this.incorrect_submit" class="text-center text-danger ">Cannot Join Ride</div>
 <div class="col-md-6 col-md-offset-3">
         <li *ngFor="let user of users">
             ({{user.first_Name}} {{user.last_Name}} {{user.driver_location}} {{user.driver_destination}} {{user.timeofdeparture}}) <br>
